# Knowledge-Graphs

./: .gitignore  README.md  evaluate_embeddings.py  protograph_p1.nt  protograph_p2.nt  pyproject.toml  random_walks.py  train_word2vec.py  train_word2vec_gensim.py
conf/: grid_search.yaml  rdf2vec_fixed.yaml
latex/: references.bib  seminar.tex
scripts/: e2e.sh  e2e_no_pretrain.sh  e2e_p1.sh  e2e_p2.sh  evaluate.sh  extract_hop1.py  extract_schema.py  extract_types.py  generate_seed_entities.py  plot_tc_loss_per_step_comparison.py  protograph.sh  random_walks.sh  remove_owl_thing.py  run_batch_e2e.sh  run_grid_search.py  run_grid_search_batch.py  run_rdf2vec_fixed_e2e.py  run_rdf2vec_p2_all_tc_init_strategies.py  run_rdf2vec_p2_maschine_e2e.py  train.sh  train_rdf2vec_dbpedia_subgraph.py
scripts/dbpedia/: README.md  build_tc01_instance_sparql.sh  build_v1_dbpedia_nt.sh  dlcc_table2_dbpedia_sparql.sparql  eval_checkpoint.sh  generate_tc01_walks.sh  run_from_dumps.sh  run_from_sparql.sh
slurm/: train_word2vec_p1.slurm
src/: convert.py  evaluate_embeddings.py  plot_rdf2vec_pca.py  tucker.py
src/dbpedia/: __init__.py  cli.py  entities.py  graph_build.py  iri_nt_materialize.py  nt_stream.py  schema_rdfs.py  sparql_fetch.py  tc01_walks.py  v1_collect.py
src/protograph/: __init__.py  maschine_init.py  protograph_gen.py
src/train/: train_word2vec.py  train_word2vec_torch.py
src/walk/: random_walks.py  wl_walks.py
