[project]
name = "knowledge-graphs"
version = "0.1.0"
description = "Learning Knowledge Graphs & Graph Learning"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pyyaml>=6.0",
    "gensim>=4.4.0",
    "matplotlib>=3.10.8",
    "pandas>=3.0.2",
    "rdflib>=7.0.0",
    "scikit-learn>=1.4",
    "torch>=2.2",
    "tqdm>=4.66",
]

[project.scripts]
protograph = "src.protograph:main"
rdf2vec-train = "src.train.train_word2vec:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
